# fv1_rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md
.githooks/: pre-push
.github/workflows/: ci.yml  copilot-setup-steps.yml
crates/fv1-asm/: Cargo.toml
crates/fv1-asm/examples/: demo.rs
crates/fv1-asm/src/: ast.rs  constants.rs  error.rs  instruction.rs  lexer.rs  lib.rs  parser.rs  register.rs
crates/fv1-asm/src/codegen/: assembler.rs  decoder.rs  disassembler.rs  encoder.rs  mod.rs
crates/fv1-asm/tests/: integration_test.rs  property_tests.proptest-regressions  property_tests.rs
crates/fv1-cli/: Cargo.toml
crates/fv1-cli/src/: main.rs
crates/fv1-dsl/: Cargo.toml
crates/fv1-dsl-macro/: Cargo.toml
crates/fv1-dsl-macro/src/: lib.rs
crates/fv1-dsl/src/: blocks.rs  lib.rs  ops.rs  typed.rs
crates/fv1-dsl/tests/: integration_tests.rs
crates/fv1-examples/: Cargo.toml
crates/fv1-examples/examples/: delay_echo.asm  gain_control.asm  passthrough.asm
crates/fv1-examples/src/: lib.rs
scripts/: install-git-hooks.sh
